<resources>
    <string name="app_name">Questions</string>
    <string name="log_in">Log In</string>
    <string name="user">User</string>
    <string name="sign_up">Sign up</string>
    <string name="select_category">Select Category</string>
    <string name="multiplication">Multiplication</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="answer">Answer</string>
    <string name="nr2">nr2</string>
    <string name="nr1">nr1</string>
</resources>
