<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.b.a.lab05.MainActivity">

    <TextView
        android:id="@+id/sign"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/nr1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="56dp"
        android:text="="
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nr1"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/nr1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nr2"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/nr2"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAnswer"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonAction"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <Button
        android:id="@+id/viewStats"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonAction"
        android:text="Stats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nr1" />

    <TextView
        android:id="@+id/questionType"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="212dp"
        android:text="Change Category"
        android:onClick="buttonAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
